Update modal service

--- a/src/app/app/shared/components/home.component.html
+++ b/src/app/app/shared/components/home.component.html
@@ -84,7 +84,7 @@
         </div>
         <div class="separator"></div>
 
-        <div class="home-table" (click)="goToLogout()">
+        <div class="home-table" (click)="toggleLogout()">
             <div class='cell icon logout'></div>
             <div class='cell'>
                 <div class="home-table">
