--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -133,7 +133,7 @@
         <div class="separator"></div>
 
 
-        <div class="container" (click)="goToLogout()">
+        <div class="container" (click)="toggleLogout()">
             <div class='cell'>
                 <div class='container'><div id='logout-btn' class='cell single'>Logout</div></div>
             </div>
