--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -180,7 +180,7 @@
         </div>
 
         <div class="no-divider">
-	        <div class= "button" (click)="gotoUnservedOrder()">
+	        <div class= "button" (click)="gotoBCPActivityStep()">
 	            <div class="button-identifier">DONE</div>
 	        </div>      
 	    </div>
