--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -15,7 +15,8 @@
             </div>
         </div>
     </div>
-    <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})">
+    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})"> -->
+    <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell width-45 padding-left-5'>Rose Cell</div></div>
@@ -32,7 +33,8 @@
             <div class='cell width-10 arrow-right'></div>
         </div>
     </div>
-    <div class="item-container" (click)="gotoCallPreparationHC({status: 'Not Visited'})">
+    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Not Visited'})"> -->
+    <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell width-45 padding-left-5'>Bird Cell</div></div>
@@ -49,7 +51,8 @@
             <div class='cell width-10 arrow-right'></div>
         </div>
     </div>
-    <div class="item-container" (click)="gotoCallPreparationHC({status: 'Visited'})">
+    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Visited'})"> -->
+    <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell width-45 padding-left-5'>Gloria Cell</div></div>
