--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -57,7 +57,7 @@
         .container {
             display: table;
             width: 100%;
-
+            height: 100%;
             &.border {
                 border-bottom: 1px solid $border-line;
             }
@@ -65,21 +65,9 @@
         .cell {
             display:table-cell;
             font-size: $content-normal;
-            height:1.6em;
+            height:100%;
             vertical-align:middle;
 
-            &.left {
-                width: 45%;
-                padding-left:0.6em;
-            }
-            &.right {
-                width: 40%;
-                text-align: right;
-            }
-            &.single {
-                width: 85%;
-                padding-left:0.6em;
-            }
             &.icon {
                 height: 15px;
                 position: center;
@@ -102,9 +90,6 @@
                     background-color: $serenade;
                 }
             }
-            &.ws{
-                width: 7%;
-            }
 
             &.bold {
                 font-weight: bold;
@@ -112,24 +97,37 @@
             &.italic {
                 font-style: italic;
             }
-            &.center {
-                text-align: center;
-            }
-
             &.grey {
                 color: $grey;
             }
             &.deep-cyan {
                 color: $deep-cyan;
             }
-
             &.sub-cell {
                 padding-left:2em;
             }
             &.title {
-                font-size: 1.2em;
-                height:2.5em;
+                font-size: 16px;
+                height:100%;
             }
+
+            &.padding-top-1 { padding-top: 1vw; }
+            &.padding-top-2 { padding-top: 2vw; }
+            &.padding-left-5 { padding-left: 5vw; }
+            &.padding-right-5 { padding-right: 5vw; }
+            &.padding-bottom-1 { padding-bottom: 1vw; }
+            &.padding-bottom-2 { padding-bottom: 2vw; }
+            &.padding-bottom-3 { padding-bottom: 3vw; }
+
+            &.width-7 { width: 7%; }
+            &.width-40 { width: 40%; }
+            &.width-45 { width: 45%; }
+            &.width-80 { width: 80%; }
+            &.width-85 { width: 85%; }
+            &.width-100 { width: 100%; }
+
+            &.align-right { text-align: right };
+            &.align-center { text-align: center; }
         }
     }
     
