--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -385,7 +385,6 @@ LIST VIEW - TEXT
                     background: $white;
                     height: 30px;
                     border: 1px solid $dark-grey;
-                    width: 50%;
                     -webkit-appearance: none;
                     border-radius: 2vw;
                     padding-left: 15px;
@@ -417,6 +416,8 @@ LIST VIEW - TEXT
             &.padding-left-5 { padding-left: 5vw; }
             &.padding-left-10 { padding-left: 10vw; }
             &.padding-right-5 { padding-right: 5vw; }
+            &.padding-left-2 { padding-left: 2vw; }
+            .margin-right-7 { margin-right: 7vw; }
             
             &.small { font-size: small; }
             &.large { font-size: large; }
@@ -439,7 +440,7 @@ LIST VIEW - TEXT
             &.green             { color: $apple; }
             &.deep-cyan         { color: $deep-cyan; }
             &.red               { color: $red; }
-   
+            
             // ROUNDED PROGRESS BAR
             .progress-radial {
                 float: left;
