updated basic call procedure back end

--- a/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
@@ -15,7 +15,7 @@
             <div class='cell icon'></div>
             </div>
         </div>
-    <div class="item-container" *ngFor="#each of vFilteredListRoute" (click)="gotoCallPreparation(each)">
+    <div class="item-container" *ngFor="#each of vFilteredListRoute" (click)="gotoAnotherPage(each)">
         <div class="container">
             <div class='cell'>
                 <div class='container'><div class='cell left'>{{each.retailer_name}}</div></div>
